[package]
name = "raytracer-in-one-weekend"
version = "0.1.0"
authors = ["Anton Bornev <a.bornev@bastion-tech.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version="0.8.0", features=["small_rng"]}
rand_distr = "0.4.0"
rayon="1.5.0"
enum_dispatch="0.3.6"